--- a/css/styles.css
+++ b/css/styles.css
@@ -784,6 +784,16 @@ img {
     visibility: visible;
 }
 
+.active-kirim {
+    opacity: 1;
+    visibility: visible;
+}
+
+.active-loading {
+    opacity: 1;
+    visibility: visible;
+}
+
 
 /*==================== PORTFOLIO ====================*/
 
@@ -1296,4 +1306,107 @@ img {
     .contact__inputs {
         grid-template-columns: repeat(2, 1fr);
     }
+}
+
+
+/* loadingggggggggggg */
+
+.container__loading {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container__loading .ring {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin: -30px;
+    border-radius: 50%;
+    border: 4px solid transparent;
+    border-top: 4px solid #24ecff;
+    animation: beesLine 4s linear infinite;
+}
+
+@keyframes beesLine {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.container__loading .ring::before {
+    content: "";
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: #24ecff;
+    box-shadow: 0 0 0 5px #24ecff33, 0 0 0 10px #24ecff22, 0 0 0 20px #24ecff11, 0 0 20px #24ecff, 0 0 50px #24ecff;
+}
+
+.container__loading .ring:nth-child(2) {
+    animation: beesLine2 4s linear infinite;
+    animation-delay: -1s;
+    border-top: 4px solid transparent;
+    border-left: 4px solid #93ff2d;
+}
+
+@keyframes beesLine2 {
+    0% {
+        transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+.container__loading .ring:nth-child(2)::before {
+    content: "";
+    position: absolute;
+    top: initial;
+    bottom: 12px;
+    left: 12px;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: #93ff2d;
+    box-shadow: 0 0 0 5px #93ff2d33, 0 0 0 10px #93ff2d22, 0 0 0 20px #93ff2d11, 0 0 20px #93ff2d, 0 0 50px #93ff2d;
+}
+
+.container__loading .ring:nth-child(3) {
+    animation: beesLine2 4s linear infinite;
+    animation-delay: -3s;
+    position: absolute;
+    top: -66.66px;
+    border-top: 4px solid transparent;
+    border-left: 4px solid #e41cf8;
+}
+
+.container__loading .ring:nth-child(3)::before {
+    content: "";
+    position: absolute;
+    top: initial;
+    bottom: 12px;
+    left: 12px;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: #e41cf8;
+    box-shadow: 0 0 0 5px #e41cf833, 0 0 0 10px #e41cf822, 0 0 0 20px #e41cf811, 0 0 20px #e41cf8, 0 0 50px #e41cf8;
+}
+
+.container__loading p {
+    position: absolute;
+    color: #fff;
+    font-size: 2.5em;
+    font-family: monospace;
+    bottom: -80px;
+    letter-spacing: 0.15em;
 }
