--- a/css/style2.css
+++ b/css/style2.css
@@ -166,12 +166,14 @@ body.dark-theme {
     align-items: center;
     text-align: center;
     margin-top: 2rem;
+    transition: .3s;
 }
 
 .stream__list li {
     text-align: center;
     display: flex;
     flex-direction: column;
+    transition: .3s;
 }
 
 .stream__list li a {
@@ -181,15 +183,18 @@ body.dark-theme {
     margin-right: .5rem;
     padding: 1rem;
     text-align: center;
+    transition: .3s;
 }
 
 .text__list {
-    font-size: 20px;
     display: flex;
-    z-index: -100;
+    transition: .3s;
+    font-size: 20px;
+    opacity: 0;
 }
 
-.stream__list li a:hover {
+.stream__list li a:hover .text__list {
     color: var(--text-color-light);
-    font-size: 2.5rem;
+    transition: .3s;
+    opacity: 100;
 }
